@@ -366,7 +366,7 @@ ac_pwd='/home/taro/mosh/gc-7.1alpha3/libatomic_ops'
 srcdir='.'
 INSTALL='/usr/bin/install -c'
 MKDIR_P='/bin/mkdir -p'
-AWK='mawk'
+AWK='gawk'
 test -n "$AWK" || AWK=awk
 # The default lists apply if the user does not specify any file.
 ac_need_defaults=:
@@ -606,7 +606,7 @@ S["STRIP"]=""
 S["INSTALL_STRIP_PROGRAM"]="$(install_sh) -c -s"
 S["MKDIR_P"]="/bin/mkdir -p"
 S["mkdir_p"]="/bin/mkdir -p"
-S["AWK"]="mawk"
+S["AWK"]="gawk"
 S["SET_MAKE"]=""
 S["am__leading_dot"]="."
 S["AMTAR"]="${SHELL} /home/taro/mosh/gc-7.1alpha3/libatomic_ops/missing --run tar"
